# fixed-id

./: LICENSE.txt  README.md  drafts.md  render.yaml
app/: .env.defaults  render.yaml
app/api/: package.json
app/api/db/: schema.prisma
app/web/: package.json
app/web/config/: webpack.config.js
app/web/src/: App.tsx  Routes.tsx  index.html
app/web/src/config/: chakra.ts
app/web/src/pages/LandingPage/: FAQs.tsx  Feature.tsx  Features.tsx  Hero.tsx  LandingPage.test.tsx  LandingPage.tsx  WaitlistModal.tsx
app/web/src/pages/WhitepaperPage/: WhitepaperPage.stories.tsx  WhitepaperPage.test.tsx  WhitepaperPage.tsx  whitepaper.md
contract/: package.json
contract/contracts/: Base.sol  Challenges.sol  FixedID.sol  IDRecovery.sol  Token.sol
notebooks/: PoH.ipynb  issuance.ipynb  pyproject.toml  scratch.ipynb
proofs/: .gitignore  README.md  abi.json  proof.zok
proofs/tests/: definitions.d.ts  fakeMerkleProof.ts  helpers.ts  package.json  test.js  test.ts  tsconfig.json
