[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Kyle Corbitt <kyle@corbt.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.2"
notebook = "^6.4.3"
matplotlib = "^3.4.3"
web3 = "^5.23.1"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
